# ai-issue-action

./: Dockerfile  LICENSE  README-RU.md  README.md  action.yml  main.py  pyproject.toml  ruff.toml
.github/workflows/: ai-issue.yml  ci.yml
src/ai_issue/: __init__.py  generator.py  main.py  models.py
tests/: __init__.py  test_generator.py  test_main.py  test_models.py
